--- a/initial/odoo/addons/theme_glosoft/views/layout.xml
+++ b/initial/odoo/addons/theme_glosoft/views/layout.xml
@@ -57,13 +57,29 @@
 		            </div>
 		            
 		            <div id="user-info-top" class="user-info pull-right">
-		                <div class="dropdown">
+		                <!-- <div class="dropdown">
 		                    <a class="current-open" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#"><span>My Account</span></a>
 		                    <ul class="dropdown-menu mega_dropdown" role="menu">
 		                        <li><a href="login.html">Login</a></li>
 		                        
 		                    </ul>
-		                </div>
+		                </div> -->
+
+		                <div class="divider" t-ignore="true" t-if="website.user_id != user_id"/>
+                                <div class="dropdown" t-ignore="true" t-if="website.user_id != user_id">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                        <b>
+                                            <span t-esc="(len(user_id.name)&gt;25) and (user_id.name[:23]+'...') or user_id.name"/>
+                                            <span class="caret"></span>
+                                        </b>
+                                    </a>
+                                    <ul class="dropdown-menu js_usermenu" role="menu">
+                                    	<li><a href="/my/home" role="menuitem">My Account</a></li>
+                                        <li id="o_logout"><a t-attf-href="/web/session/logout?redirect=/" role="menuitem">Logout</a></li>
+                                        <li><a href="#">Hapa</a></li>
+                                    </ul>
+                                </div>
+
 		            </div>
 		        </div>
 		    </div>
@@ -331,7 +347,7 @@
 	  <!-- </xpath> -->
       <!-- end of inherited main element-->
 
-      <xpath expr="//div[@id='wrapwrap']/header/div" position="replace">
+     <xpath expr="//div[@id='wrapwrap']/header/div" position="replace">
 
 	 <div class="navbar navbar-default navbar-static-top">
                     <div class="container">
